# h_files_generator

./: Cargo.toml  README.md
src/: header_constructor.rs  main.rs  test.c
src/header_constructor/: mod.rs
