[package]
name = "hgen"
version = "1.0.0"
authors = ["nikolk1 <nikolk202@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.1.5"
clap = { version = "3.0.5", features = ["derive"] }
lazy_static = "1.3.0"